2008-03-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala: fix argument
	  dependency in the C code for array and delegate arguments,
	  fixes bug 519597

	* tests/arrays.vala: test array argument

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* tests/testrunner.sh: ensure tests don't report errors on stderr

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix error when using type
	  parameter in generic type methods

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormethod.vala: support methods throwing
	  exceptions and returning generic type parameter

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valacodecontext.vala, vala/valaenumvalue.vala:
	  use source_reference for enum values

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_menu_popup binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala, vala/valaunaryexpression.vala:
	  support binary expressions in default arguments

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinterface.vala,
	  gobject/valaccodegeneratorsignal.vala: support GLib.Error as
	  signal parameter type, fixes bug 519415

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix try catch statements without
	  thrown exceptions, fixes bug 506016

	* tests/exceptions.vala: test try catch statements without errors

2008-02-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: support throw statements in try
	  statements

	* tests/exceptions.vala: test throw statement in try statement with
	  generic catch clause

2008-02-28  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala: support instance delegate fields,
	  fixes bug 519231

2008-02-28  Jürg Billeter  <j@bitron.ch>
