@@ -1,6 +1,6 @@
 /* valaccodecommaexpression.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -37,7 +37,11 @@ public class Vala.CCodeCommaExpression : CCodeExpression {
 	public void append_expression (CCodeExpression! expr) {
 		inner.add (expr);
 	}
-	
+
+	public Collection<CCodeExpression> get_inner () {
+		return new ReadOnlyCollection<CCodeExpression> (inner);
+	}
+
 	public override void write (CCodeWriter! writer) {
 		bool first = true;
 	
